--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Modbus报文生成器</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <!-- 自定义样式 -->
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -54,11 +56,60 @@
                                 <div class="form-text">请输入1-4位十六进制数字（0-9，A-F）</div>
                             </div>
 
-                            <!-- 数据长度/值 -->
+                            <!-- 数据值 -->
                             <div class="mb-3">
                                 <label for="dataValue" class="form-label">数据值</label>
-                                <input type="text" class="form-control" id="dataValue" placeholder="输入十六进制数据，如：01 02 03">
-                                <div class="form-text">多个值用空格分隔</div>
+                                <div class="input-group mb-2">
+                                    <input type="text" class="form-control" id="dataValue" placeholder="输入十六进制数据，如：01 02 03">
+                                    <button class="btn btn-outline-secondary" type="button" id="clearDataBtn">
+                                        <i class="bi bi-x-lg"></i>
+                                    </button>
+                                </div>
+                                <div class="form-text mb-2">多个值用空格分隔</div>
+
+                                <!-- 数据转换工具 -->
+                                <div class="data-converter border rounded p-3 bg-light">
+                                    <div class="row g-2 mb-2">
+                                        <div class="col">
+                                            <input type="number" class="form-control" id="decValue" placeholder="十进制值">
+                                        </div>
+                                        <div class="col-auto">
+                                            <select class="form-select" id="dataFormat">
+                                                <option value="uint16">UINT16</option>
+                                                <option value="int16">INT16</option>
+                                                <option value="uint32">UINT32</option>
+                                                <option value="int32">INT32</option>
+                                                <option value="float">FLOAT</option>
+                                            </select>
+                                        </div>
+                                        <div class="col-auto">
+                                            <button type="button" class="btn btn-primary" id="convertBtn">转换</button>
+                                        </div>
+                                    </div>
+
+                                    <!-- 字节序选择 -->
+                                    <div class="btn-group btn-group-sm mb-2" role="group">
+                                        <input type="radio" class="btn-check" name="byteOrder" id="abcd" value="abcd" checked>
+                                        <label class="btn btn-outline-secondary" for="abcd">ABCD</label>
+                                        <input type="radio" class="btn-check" name="byteOrder" id="dcba" value="dcba">
+                                        <label class="btn btn-outline-secondary" for="dcba">DCBA</label>
+                                        <input type="radio" class="btn-check" name="byteOrder" id="badc" value="badc">
+                                        <label class="btn btn-outline-secondary" for="badc">BADC</label>
+                                        <input type="radio" class="btn-check" name="byteOrder" id="cdab" value="cdab">
+                                        <label class="btn btn-outline-secondary" for="cdab">CDAB</label>
+                                    </div>
+
+                                    <!-- 常用值快速选择 -->
+                                    <div class="quick-values">
+                                        <div class="mb-1">常用值：</div>
+                                        <div class="btn-group btn-group-sm flex-wrap">
+                                            <button type="button" class="btn btn-outline-secondary quick-value" data-value="0000">0</button>
+                                            <button type="button" class="btn btn-outline-secondary quick-value" data-value="0001">1</button>
+                                            <button type="button" class="btn btn-outline-secondary quick-value" data-value="00FF">255</button>
+                                            <button type="button" class="btn btn-outline-secondary quick-value" data-value="FFFF">65535</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
 
                             <!-- 注释 -->
